List of contributors externalized in a csv file.

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -6,7 +6,7 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Contributing to Clojure 
+== Contributing to Clojure
 
 Following the lead of other open source projects, the Clojure project requires contributors to jointly assign their copyright on contributed code. The https://secure.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (CA) gives Rich Hickey and the contributor joint copyright interests in the code: the contributor retains copyrights while also granting those rights to Rich Hickey as the open source project sponsor.
 
@@ -14,1116 +14,20 @@ The CA is derived from the Oracle Contributor Agreement (OCA), used for OpenJDK,
 
 The CA does not change the rights or responsibilities of the Clojure community under the http://opensource.org/licenses/eclipse-1.0.php[Eclipse Public License (EPL)]. By executing the CA, contributors protect the Clojure code base, enable alternative licensing models, and protect the flexibility to adapt the project to the changing demands of the community. In order for the CA to be effective, the Clojure project must obtain an assignment for all contributions. Please review the CA for a complete understanding of its terms and conditions. By contributing source code or other material to Clojure, you represent that you have a CA with Rich Hickey for such contributions. In order to track contributors, you understand that your full name and username may be posted on a web page listing authorized contributors that is accessible via a public URL.
 
-== Instructions for submitting the agreement 
+== Instructions for submitting the agreement
 
 * Fill out and submit the https://secure.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (an online e-form)
 
-== Making a contribution 
+== Making a contribution
 
 Before you invest time working on a change, discuss what you're trying to do with others on the http://groups.google.com/group/clojure-dev[Clojure Dev Google group]. They're likely to be able to offer comments and suggestions that will result in a higher-quality change and a smoother submission process. Announcing that you're working on a particular item can also help to avoid wasted effort in case someone else is already working on it. Once you've submitted the CA, you can http://dev.clojure.org/jira/browse/CLJ[submit patches via JIRA]. Frequent and trusted contributors of more substantial libraries may be granted committer membership in the Clojure contrib projects.
 
 Please see the http://dev.clojure.org/display/community/Contributing[Contributing] wiki for a collection of resources on tickets, builds, patches, source, and more. If you'd like to submit a patch, please follow these guidelines on the http://dev.clojure.org/display/community/JIRA+workflow[preferred process for submitting].
 
-== _Signed Contributor Agreement:_ 
-
-* Sam Aaron
-* Marshall Abrams (mars0i)
-* Earle Acosta (eacosta)
-* Brandon J Adams (emidLn)
-* Bruce Adams (bruceadams)
-* Mark Addleman (markaddleman)
-* Matthew Adereth (adereth)
-* Rohit Aggarwal (ducky427)
-* Gunnar Ahlberg
-* Trent Albright (talbright)
-* Aleksandr (sherpc)
-* J. Alex (alexkyllo)
-* Neill Alexander
-* James Aley (jaley)
-* Sean Allen
-* Zachary Allaun (zachallaun)
-* Raphaël Amìard (raph-amiard)
-* Nada Amin (Namin)
-* Vipul Amler (vipulnsward)
-* Andre Luis Anastacio (andreanastacio)
-* Harold Ancell (hga)
-* Craig Andera
-* Jeremy Anderson (punkisdead)
-* Mike Anderson (mikera)
-* Timothy Andrew (timothyandrew)
-* Nguyen Tuan Anh (ubolonton)
-* Teemu Antti-Poika (anttipoi)
-* Fredrik Appelberg
-* Joshua Arnold
-* Juha Arpiainen
-* Brenton Ashworth
-* Erik Assum (slipset)
-* Philip Aston (phiipa, philipa)
-* Atamert (muhuk)
-* Aditya Athalye (adityaathalye)
-* Charlton G. Austin (charlton.austin)
-* Nate Austin
-* Francis Avilla (favilla)
-* Ivan Babanin (babanin)
-* Josep M. Bach (txus)
-* Nandan Bagchee
-* Eric Bailey (yurrriq)
-* Nick Bailey (nickmbailey)
-* Andrew Baine
-* Timothy Baldridge (halgari)
-* Plinio M. Balduino (pbalduino)
-* Scott Bale (scottbale)
-* Donald Ball (dball)
-* Joshua Ballanco (jballanc)
-* Michael Ballantyne (michaelballantyne)
-* Justin Balthrop
-* Alex Baranosky (abaranosky)
-* Rafal Baranowicz (kmicu)
-* Max Barnash (arr-ee)
-* Julio Barnes
-* Luca Barozzi (icamts)
-* Leon Barrett (leon-barrett)
-* Julio Barros
-* Paul Barry
-* Bozhidar Batsov (bbatsov)
-* Paul Batum
-* Paul Bauer
-* Bradley Beck (bradbeck)
-* Aaron Bedra
-* Rick Beerendonk (rickbeerendonk)
-* Simon Belak (sbelak)
-* Daniel Bell (invaliduser)
-* Adrian Bendel (abp)
-* Aspasia Beneti (aspasia)
-* Sebastian Bensusan (bensu)
-* Nicolas Berger (nberger)
-* Paul Bernard
-* Trevor Bernard (trevorbernard)
-* Fabio Bernasconi (instilled)
-* Francois Bernier (fbernier)
-* Alec Berryman
-* Bijoy (bijoyv)
-* Aysylu Biktimirova (aysylu)
-* Chris Bilson (cbilson)
-* Darrell Bishop
-* Ian Bishop (ianbishop)
-* Jordan Bisserkov (biserkov)
-* Raju Bitter (raju-bitter)
-* Terje Sten Bjerkseth (Terjesb)
-* Matthew Blair (mblair)
-* Martin Blais
-* Armando Blancas
-* John C Bledsoe (jcbledsoe)
-* Donald Bleyl (dbleyl)
-* Chris Blom (ChrisBlom)
-* Jim Blomo (jblomo)
-* Brandon Bloom (bbloom)
-* Nils Blum-Oeste (nblumoe)
-* Michael Blume (MichaelBlume)
-* Christian Blunden (christianblunden)
-* Marshall T. Bockrath-Vandegrift (llasram)
-* Stefan Bodewig (bodewig)
-* Friedrich Boeckh (fbmnds)
-* Joel Boehland (jolby)
-* Vladimir Bokov (razum2um)
-* Sven Boekhoff (sboekhoff)
-* Robin Bate Boerop (robinbb)
-* Kovas Boguta (kovasb)
-* Ambrose Bonnaire-Sergeant (frenchy64)
-* Jeremy Bondeson
-* Rinu Boney (rinuboney)
-* Kuldeep Bora (kul)
-* Renzo Borgatti (reborg)
-* Leonardo Borges (leonafdoborges)
-* Michiel Borkent (borkdude)
-* Jonathan Boston (bostonou)
-* Matthew Boston (bostonaholic)
-* Ed Bowler
-* Brad Bowman
-* Curtis Bowman (narwally)
-* Michael Bradley (michaelsbradleyjr)
-* Lucas Bradstreet (lbradstreet)
-* Meikel Brandmeyer (mb, mikesh)
-* Jamie Brandon (Jamii)
-* Arne Brasseur (plexus)
-* Andrew Brehaut
-* Miron Brezuleanu
-* Lance Bradley
-* Andreas Brenk
-* Aaron Brooks
-* Timothy Brooks (tbrooks8 - github)
-* Vince Broz (apiology)
-* Craig Brozefsky (craigbrozefsky/craigbro)
-* Federico Brubacher
-* Kendall Buchanan (kendagriff)
-* Logan Buckley (loganmhb)
-* Peter Buckley
-* Nicolas Buduroi
-* Jan-Paul Bultmann (ticking)
-* Kyle Burton
-* Paul Butcher (paulbutcher)
-* Dylan C. Butman (pleasetrythisathome)
-* David Cabana (drcabana)
-* Stephan Cagle
-* Bobby Calderwood
-* Stuart Campbell (harto)
-* Christopher W. Carpenter (mordocai)
-* Brian Carper (briancarper)
-* James Cash (jamesnrc)
-* Eric Caspary (ERR)
-* Andrew Cavallaro (andrewcavallaro)
-* Marcus Cavanaugh
-* Bruno Kim Medeiros Cesar (Brumokim)
-* Andy Chambers (cddr)
-* Dustin Cheng (DustinCheng)
-* John Chijioke (johnbendi)
-* Alex Chin
-* Antoine Choppin (japonophile)
-* Eric Christensen (ecounysis)
-* Russell Christopher (russellc)
-* Nicholas Chubrich (nchubrich)
-* Michael O. Church (michaelochurch)
-* Matt Clark
-* Jonathan Claggett
-* Casper Clausen (casperc)
-* Adam Clements (AdamClements)
-* Tim Clemons (timclemons)
-* Cognitect, Inc. (Justin Gehtland - jgehtland)
-* Josh Comer (jjcomer)
-* Giacomo Cosenza (magomimmo)
-* Tobias Daniek Clemson (tobyclemson)
-* Troy Clevenger (dethstryke)
-* Christopher Codrington
-* Aaron Cohen
-* Mike Coleman
-* Drew Colthorp
-* Stephen Compall (S11001001)
-* Daniel Compton (danielcompton)
-* James Conroy-Finn (jcf)
-* Ben Cook (blx)
-* Mary Rose Cook (maryrosecook)
-* Brian L. Cooley (blcooley)
-* Kyle Cordes
-* Roger Corman
-* Sean Corfield
-* Mark Countryman
-* Matthew Courtney (macourtney)
-* Alex Coventry
-* Aaron Craelius (aaronc)
-* Thomas Crayford (tcrayford)
-* Tobias Crawley(Jira: tcrawley; Github: tobias)
-* Dennis Crenshaw
-* Jim Crossley (jcrossley3)
-* Aaron Crow
-* Adrian Cumiskey (lambdachops)
-* Arlen Christian Mart Cuss (unnali)
-* Ragner Dahlen (ragnard)
-* Michael S. Daines (defndaines)
-* Tom Danielsen
-* Matthew Davidson (kingMob)
-* Daniel DeAguiar (ddeaguiar)
-* Joshua Davey (jdavey)
-* Paul deGrandis
-* Mike DeLaurentis
-* David Della Costa (ddellacosta)
-* Lake Denman (ldenman)
-* Steven Deobald (deobald)
-* Mark Derricutt
-* Francois De Serres (justiniac)
-* Adityo Deshmukh
-* Gurudev Devanla (gdevanla)
-* Sean Devlin
-* Pepijn de Vos
-* Jonas De Vuyst (jdevuyst)
-* Suminda Sirinath Salpitikorala Dharmasena (sirinath)
-* Dhruv (dhruvp)
-* Pietro Francesco Menna Ruiz Diaz (pietromenna)
-* Steffen Dienst (smee)
-* Jeffrey Dik
-* Daniel Dillinger (ddillinger)
-* Tejas Dinkar (gja)
-* Daniel Dinnyes (dadinn)
-* Alan Dipert
-* Jon Distad
-* Gal Dolber (galdolber)
-* Paul Dorman (PntBlnk)
-* Mike Douglas (fanatico)
-* Alex Dowad (alexdowad)
-* Kevin Downey (hiredman)
-* John Downs (jdowns)
-* Brian Doyle (heyzeus23)
-* Chris Drane (csdrane)
-* Reid Draper (reiddraper)
-* Michael Drogalis (Michael Drogalis)
-* Eugen Dück
-* Jim Duey
-* Charles Duffy
-* Hugo Duncan
-* Holger Dürer (h.duerer)
-* Vijaya Kiran Duvvuri (vijaykiran)
-* Mieczyslaw Daniel Dyba (dyba)
-* Tim Dysinger
-* Arthur Edelstein (arthuredelstein)
-* Miles Egan
-* Christian Egli (egli)
-* J. David Eisenberg (jdeisenburg)
-* Magnus Ekstrand
-* Julien Eluard (jeluard)
-* Chas Emerick (cemerick)
-* Alex Engelberg (aengleberg)
-* Mark Engelberg (puzzler)
-* Jonas Enlund (jonase)
-* Ilya Epifanor (hajile)
-* Balint Erdi (balint erdi)
-* Linus Ericsson (claj)
-* Robert Ernst (BobErnst)
-* Trevis Elser (telser)
-* Janos Erdos (erdos)
-* Ian Eure (ieure)
-* Kenny Evitt (kenny-evitt)
-* Robert Ewald (robewald)
-* Tim Ewald
-* Juan Martin Munoz Facorro (jfacorro)
-* Joseph Fahey (josf)
-* Frank Failla
-* Bruce Fancher
-* Julien Fantin (julienfantin)
-* Matthew Farrell (farrellm)
-* William K Farrell (wkf)
-* Tom Faulhaber
-* Graham Fawcett (gmfawcett)
-* Benedek Fazekas (benedekfazekas)
-* Edipo Luis Fedele (edipofederle)
-* Mark Feeney (overthink)
-* Jason Felice (eraserhd)
-* Katherine Fellows (kpfell)
-* Osbert Feng (osbert)
-* Abe Fettig (abram)
-* Adam Feuer
-* Mike Fikes (mfikes)
-* Andy Fingerhut
-* Nathaniel Flath
-* Colin Fleming (cmf)
-* Josh Fleming (joshvfleming)
-* Angus Fletcher (angusiguess)
-* Benoit Fleury (benfle)
-* Dirk Focken (timtellos)
-* Eric Fode (ericfode)
-* Michael Fogus
-* Vincent Foley-Bourgon (gnuvince)
-* Christopher Ford (ctford)
-* Alan Forrester (alanforr)
-* Joshua Foster (jhawk28)
-* Ryan Fowler (ryfow)
-* Peter Fraenel (pnf)
-* Matthew Frazier (leafstorm)
-* Gary Fredericks (fredericksgary)
-* Mark Fredrickson
-* Michael Frericks (frericksm)
-* Chris Frisz (cjfrisz)
-* Keisuke Fukuda (keisukefukuda)
-* James Gatannah (JIMRTHY)
-* Mayank Jain (firesofmay)
-* Tayssir John Gabbour
-* Eldar Gabdullin (eldargab)
-* Artur Gadelshin (pondohva)
-* Joseph Gallo
-* Sebastian Galkin
-* Peter Garbers (petergarbers)
-* Timothy Gardner (timsgardner)
-* Devin Garner (speige)
-* Dimitry Gashinsky (digash)
-* Jon Gauthier (hans)
-* Mathieu Gauthron (matlux)
-* Paul Gearon
-* Justin Gehtland
-* Maria Geller (mneise)
-* Christopher Genovese
-* Fred George
-* Dustin Getz (dustingetz)
-* Dirk Geurs (dirklectisch)
-* Baishampayan Ghose
-* Sam Gibson (samfoo)
-* Luca Gilardi (lucag)
-* Stephen C. Gilardi (squeegee)
-* Matthew Gilliard (mjg123)
-* Julian Gindi (juliangindi)
-* Kylo Ginsberg (kylog)
-* Petr Gladkikh (PetrGlad)
-* Michael Glaesemann
-* Daniel Glauser (danielglauser)
-* Joergen Gmeiner (spamless_j)
-* Jochen Goertler (grtbr)
-* Buck Goleman (bukzor)
-* Devender Gollapally (devender)
-* Patrick Gombert (patrickgombert)
-* Alejandro Gomez (alejandrogomez)
-* Jose Gomez (k13gomez)
-* Roman Gonzalez (roman)
-* Sidmant Gooiwala
-* Heow Goodman
-* Christopher Mark Gore (cgore)
-* Brian Goslinga
-* Jake Goulding (shepmaster)
-* Irakli Gozhlishvili (Gozalh)
-* Christophe Grand (grand)
-* Christopher Granger (ibdknox)
-* Leon Grapenthin (lgrapenthin)
-* Chris Gray (chrismgray)
-* Nahuel Greco (nahuel)
-* David Greenberg
-* Daniel L. Gregiore
-* Matjaz Gregoric (mtyaka)
-* Leonard Grey (speednoisemovement)
-* Charlie Griefer
-* Tim Griesser (tgriesser)
-* Dave Griffith
-* Joshua B. Griffith (hadronzoo)
-* David Griffiths
-* Michael J. Griffiths (cichli)
-* Daniel Grijuela (dgrijuela)
-* Anthony Grimes (raynes)
-* Lynn Grogan (lynngrogan)
-* Dmitry Groshev (si14)
-* Ewen Grosjean (ewenG)
-* Sean Grove (sgrove)
-* Chen Guo (chenguo)
-* Andrew Gwozdziewycz
-* Akos Gyimesi (gyim)
-* Austin Haas (austinhaas)
-* Phil Hagelberg (technomancy)
-* Scott Haleen (scotthaleen)
-* Stuart Halloway
-* Peter Hanak (hanakpet)
-* Manish Handa (hmanish)
-* Bruce Hauman (bhauman)
-* Robin Heggelund Hansen (Skinney)
-* Elliot Hanser (eah13)
-* Michael Hanson (mybuddymichael)
-* Gregory Harman
-* Brandon Harper (devnalled)
-* Kurt Harriger (kurtharriger)
-* Chad Harrington
-* Michael Harrison
-* Brandon Harvey
-* Benjamin Haskell (benizi)
-* Colin Hastie (Chastie)
-* Tobias Hauth (toloh)
-* Justin Haynes (jhaynes)
-* Joshua Headapohl (joshhead)
-* JR Heard (jrheard)
-* Thomas Heller (THHeller)
-* Immo Heikkinen (immoh)
-* Jeremy Heiler (jeremyheiler)
-* James Henderson (james-henderson)
-* Sebastian Hennebrueder (laliluna)
-* Brandon Henry (bhenry)
-* Gerrit Hentschel (gerrit-hntschl)
-* Jean-Francois Heon (JeffHeon)
-* Brendan Hickey
-* Tom Hickey
-* Tom Hicks
-* Antonin Hildebrand (darwin)
-* Adam Hill (adamhill)
-* Bridget Hillyer
-* Mike Hinchey (hincheymg)
-* Matthew Hinman
-* Konrad Hinsen
-* Stuart Hinson (stuarth)
-* Tyler Hobbs (thobbs)
-* Herwig Hochleitner (bendlas)
-* Matt Hoffman (matthoffman)
-* Travis Hoffman
-* Barry Hoggard (bhoggard)
-* Christopher Joel Holdbrooks
-* Simon Holgate
-* Justin Holguin (holguinj)
-* Jakub Holy
-* Shawn Hoover (shoovertime)
-* Rahul Hore (O-I)
-* Tassilo Horn (tsdh)
-* Gabriel Horner (cldwalker)
-* Jürgen Hötzel
-* Chris Houser (chouser)
-* Matt Hoyt (mrb0057)
-* Takahiro Hozumi
-* Ziyang Hu(zh217)
-* Raymond Huang (rymndhng)
-* Jeremy Hughes (jedahu)
-* Hunter Hutchinson
-* Robert Hutchison (hutch)
-* Peter Hultgren
-* John D. Hume (duelin.markers)
-* Chad Humphries (spicycode)
-* Jasper Humphrey
-* David James Humphreys (davidjameshumphreys)
-* Brian Hurt
-* Robert Hutchison (hutch)
-* Vladimir Iakovlev (nvbn)
-* Regina Imhoff (StabbyMcDuck)
-* Omer Iqbal (olenhad)
-* Michael Ivey
-* Hubert Iwaniuk (neotyk)
-* Donald Clark Jackson (dcj/likestream)
-* Thomas Jack (tomoj)
-* Edmund Jackson (ejackson)
-* Jason Jackson (jasonjckn)
-* David Jacobs (davejacobs)
-* John Jacobsen (eigenhombre)
-* David Jacot (dajac)
-* George Jahad
-* Ravindra R. Jaju (jaju)
-* Blake Jakopovic (blakejakopovic)
-* Tom Jakubowski (tomjakubowski)
-* Asim Jalis
-* David James
-* Anders Janmyr (andersjanmyr)
-* Piotr Jarzemski (kazuhiro)
-* W. David Jarvis (venantius)
-* Bodaniel Jeanes (bjeanes)
-* Khalid Jebbari (DjebbZ)
-* Brian Jenkins (bonkydog)
-* Sean Jensen-Grey (seanjensengrey)
-* Chris Jeris (BCcjeris)
-* Chris K. Jester-Young
-* Jason Jobe
-* Allen Johnson
-* Ryan Johnson (bakeemawaytoys)
-* Robert Johnson (RobertLJ)
-* Wilkes Joiner (wilkes)
-* Colin Jones
-* Gareth Jones
-* Kevin Ilchmann Jorgensen (kij)
-* Sivasubramanian K (mksiva)
-* Oliver Kaiser (undernorthernsky)
-* Steven Kallstrom (kallstrom)
-* Stefan Kamphausen (ska2342)
-* John Kane
-* Maksim Karandashov (Norgat)
-* Antti Karanta (akaranta)
-* Yrjö Kari-Koskinen (ykarikos)
-* Laurence Karnowski
-* Bart Kastermans (kasterma)
-* Simon Katz
-* Christian Kebekus
-* James A Keene (jamak)
-* Daniel Kersten (danielytics)
-* George Kierstein (MissInterpret)
-* Matt Keller
-* Alexander Kellett (lypanov)
-* Matthew Kennedy (lispnik)
-* Rett Kent (rettkent)
-* Patrick Killean (idiotslowdown)
-* Brian Kim (brainkim)
-* Daniel Kim (danielrk)
-* Eunmin Kim (eunmin)
-* Zachary Kim
-* Adam King (aking)
-* Alexander James King (alexanderjamesking)
-* Tim King (kingtim)
-* Tristan King
-* Kyle Kingsbury (aphyr)
-* David Kinzer (dkinzer)
-* Creighton Kirkendall (ckirkendall)
-* Neil Kirsopp (cursork)
-* Andy Kish
-* Dom Kiva-Meyer
-* Alan Bustos Kleiman (akleiman)
-* Marius Kjeldahl (mariusk)
-* Martin Klepsch (martinklepsch)
-* Андрей Клещинский / Andrei Kleschinski (metametaclass)
-* Michael Klishin (micharlklishin)
-* Aravind K.n (arav93)
-* Simon Knudsen (simonknudsen)
-* Eduard Knyshov (edvorg)
-* Georges KO (gko, geko)
-* Kenichi Kobayashi (kencoba)
-* Eric Kobrin (erluko, ekobrin)
-* Yoshito Komatsu (ykomatsu)
-* Eugene Koontz (ekoontz)
-* Tobias Kortkamp (t6)
-* Jeffrey Kowalczyk
-* Ivan Kozik
-* Misha Kozik (mishadoff)
-* Nandor Kracser (bonifaido)
-* Robert Krahn (rksm)
-* Justin Kramer
-* Max Kreminski (mkremins)
-* Stas Krichevsky (stask)
-* Krishna Krishnamaneni
-* Thomas G. Kristensen (tgk)
-* Paul Kristoff
-* Karl Krukow (krucow)
-* Mikhail Ksenzov (mksenzov)
-* Tomas Kulich (tomaskulich)
-* Kiran Kulkarni (kiran)
-* Ryohei Kumakiri (ark6)
-* Shantanu Kumar
-* Raghuveer Kumarakrishnan (raghuftw)
-* Zhang Kun (azurezk)
-* Antony Kuzmicicu
-* Youndo Kwak (kwakbab)
-* Alyssa Kwan
-* Wayne LaBelle
-* Robert Lachlan (Heffalump)
-* Pieter Laeremans (plaeremans)
-* Paul Lam (Quantisan)
-* Anthony LaMantia (w4ffles)
-* William Langstroth
-* Dan Larkin
-* Olov Lassus
-* Neil Laurance (toolkit)
-* Karlis Lauva (skazhy)
-* Oliver Lauzon (olauzon)
-* James Laver (jjl)
-* Eric Lavigne
-* Thom Lawrence (delver)
-* David Leatherman (leathered)
-* Sergei Lebedev (superbobry)
-* Minsun Lee (dalzony)
-* Thomas Lee (thomaslee)
-* Paul Legato
-* Eric Le Goff (elegoff)
-* Matt Lehman (mlehman)
-* Carl Lerche (carllerche)
-* Robert P. Levy (rplevy)
-* Jason Lewis (canweriotnow)
-* John Li (jli)
-* Kanwei Li (kanwei)
-* David Liebke
-* Andreas Liljeqvist (bonega)
-* August Lilleaas
-* Marc Limotte (mlimotte)
-* Henrik Lindberg (hlindberg)
-* Eli Lindsey (elindsey)
-* Logan Linn (loganlinn)
-* Ernestas Lisauskas (ernestas)
-* Chris Lohfink (clohfink)
-* Gregory Look (greglook)
-* Yanxiang Lou (louyx)
-* J. David Lowe (dlowe)
-* Ignacio Blasco Lopez (elnopintan)
-* Jean Niklas L'orange (hyPiRion)
-* Scott Lowe (scottlowe)
-* Peter Lubell- Doughtie (pld)
-* Craig Brent Ludington
-* Andreas Lundahl (andreaslundahl)
-* Simon Lutzelschwab (simonpure)
-* Richard Lyman (richard-lyman)
-* Kevin Lynagh (lynaghk)
-* Daniel Lyons
-* Ben Mabey
-* Elena Machkasova (elenam)
-* Brian Maddy
-* Shaun Mahood (smahood)
-* Christopher Maier
-* Glen Mailer (glenjamin)
-* Alan Malloy
-* Itay Maman
-* Chester Mancini (chetmancini)
-* Vedang Manerikar
-* Max Jiayin Mao (jmao)
-* Matthew Maravillas
-* Tom Marble
-* Michal Marczyk
-* Jeff Marder
-* Mauricio Aldazosa Mariaca (mauricio aldazosa)
-* Anthony Marcar (moocar)
-* Zach Maril (zmaril)
-* Daniel Marjenburgh (dmarjenburgh)
-* Nuno Marques (nfma)
-* Ken Marshall (kmarshall008)
-* Jiri Marsik (jirkamarsik)
-* Raphael Martelles
-* Olle Martensson (ollez)
-* Jess Martin (jessmartin)
-* Joel Martin (kanaka)
-* Micah Martin (slagyr, micahmartin)
-* Nathan Marz (nathanmarz)
-* OGINO Masanori (omasanori)
-* John Mastro (johnmastro)
-* Nathan Matthews (N8DAWGRR)
-* J. McConnell (j-dot)
-* Tim McCormack
-* Jake McCrary (jakemcc)
-* Jeffrey J. McCune (jeffmccune)
-* Craig McDaniel (craigmcd)
-* Craig McDaniel (cpmcdaniel)
-* Christopher McDevitt (minimal)
-* Ross McDonald (rossputin)
-* Mark McGranaghan (mmcgrana)
-* Robert McIntyre (rlm, bortreb)
-* Reid McKenzie (github: arrdem)
-* Jonathon McKitrick (j-mckitrick)
-* Murphy McMahon (pandeiro)
-* David McNeil
-* andrew McVeigh (andrewmcveigh)
-* Adrian Medina (aamedina)
-* Christopher Meiklejohn (cmeiklejohn)
-* Carin Meier
-* Philipp Meier (ordnungswidrig)
-* Johan Mena (jhn)
-* Andrew s. Meredith (kendru)
-* Benjamin C Meyer
-* Evan Mezeske (emezeske)
-* Timo Mihaljov (noidi)
-* Ivan Mikushin (imikushin)
-* Brent Millare (bmillare)
-* Alex Miller (puredanger)
-* David Miller
-* Mike T. Miller (mtm)
-* Samuel Miller (kamn)
-* Stephen Miner
-* Sergey Miryanov
-* Andrii Mishkovskyi(mishok13)
-* Nachiketa Mishra (nmishra)
-* Stuart Mitchell (stumitchell)
-* Richard Mohn (moehn)
-* Michael Monette (mmonette)
-* Bhaskar Mookerji (mookerji)
-* Deon Moolman (cmdrdats)
-* Paul Mooser
-* Shawn Morel (strangemonad)
-* Adam J. Morgan (ajmorgan)
-* Will Morgan (wwmorgan)
-* Paudi Moriarty
-* Rich Morin (RichMorin)
-* Ralph Moritz
-* Nelson Morris
-* Jacob Mortansen (jacobm)
-* Simone Mosciatti (Siscia)
-* Ben Moss (benmoss)
-* Davie Moston (davie)
-* Priyatam Mudivarti (priyatam)
-* Don Mullen
-* Marco Munizaga (MarcoPolo)
-* Elliot Murphy (statik)
-* Jason Murphy (jsonmurphy)
-* Ramakrishnan Muthukrishnan
-* Tim Myrtle
-* Rafik Naccache (turbopape)
-* Eli Naeher (enaeher)
-* Ryotaro Nakamura (KazumaSATO)
-* Stanislas Nanchen
-* Ramsey Nasser (nasser)
-* Niklas Narhinen (nnarhinen)
-* Dmitri Naumov (dnaumov)
-* Michael Nussbaum (mnussbaum)
-* Jon Neale (jonneale)
-* Kevin Neaton (neatonk)
-* Ganesh Neelekani(ganeshneelekani)
-* Or Neeman (oneeman)
-* Matthias Nehlsen (matthiasn)
-* Maria Neise (MNeise)
-* Joubert Nel
-* Alex Nelson
-* Sam Neubardt ( Samn)
-* Ryan Neufeld (rkneufeld)
-* Richard Newman
-* Thomson Nguyen (itsthomson)
-* Mometto Nicola (bronsa)
-* Robert Nikander (rnikander)
-* Ayato Nishimura (ayato0211)
-* Micha Niskin (micha)
-* Clinton Nixon (crnixon)
-* David Nolen
-* Aron Nopanen (aroneous)
-* Eric Normand (ericnormand)
-* Jakub Nowak (mecolin)
-* Duarte Nunes (duartem)
-* Tomasz Nurkiewicz (nurkiewicz)
-* Kyle Nusbaum (knusbaum)
-* Mark Nutter (manutter51)
-* Bryce Nyeggen (fiatmoney)
-* Michael Nygard
-* Zachary S. Oakes (oakes)
-* Jan Oberhagemann
-* Robert O'Connor (robbyoconnor)
-* Stefan Oestreicher
-* Trent Ogren (misfo)
-* Shogo Ohta (athos)
-* Rory O'Kane (roryokane)
-* Michael O'Keefe (michael-okeefe)
-* David O'Meara (davidomeara)
-* Russ Olsen
-* Jim Oly
-* Matt Oquist (moquist)
-* Jarkko Oranen (Chousuke)
-* James Orchard-Hays
-* Alex Osborne (ato)
-* Alex Ott
-* Erik Ouchterlony (ejlo)
-* Nicolas Oury
-* Ustun Ozgur (ustunozgur)
-* Sung Pae (guns)
-* PaGrom (PaGrom)
-* Jeff Palmucci (jpalmucci)
-* Jinyu Pan (swimablefish)
-* Bruno Panasiewicz (ciuak)
-* Niranjan Paranjape (achamian)
-* Thonghee Park
-* Paavo Parkkinen (pparkkin)
-* Achim Passen
-* Chris Paul (cmpaul)
-* Jestine Paul (jestinepaul)
-* Anna Pawlicka (apawlicka)
-* Sherman Pay (shermpay)
-* Marc Peabody (marcpeabody)
-* Mike Pence (mikepence)
-* Michael D. Pendergrass (mdpendergrass)
-* Maximilien Penet (mpenet)
-* Ted Pennings (ted pennings / thesleepyvegan)
-* Vitaly Peressada (vitalyper)
-* Eduardo Emilio Julian Pereyra
-* Chris Perkins
-* Lauri Pesonen (liwp)
-* J. Matt Peterson (jmatt)
-* Michael Peterson
-* Laurent Petit
-* Christopher Petrilli
-* Robert Pfeiffer (tarquinius)
-* Daniel Phelps
-* Douglas Philips
-* Ian Phillips (ianp)
-* Jonathan Phillips
-* Matthew Phillips (scramjet)
-* Phong (edwastone)
-* Phongphan Phuttha (phongphan)
-* Brian Picciano (mediocregopher)
-* Olli Piepponen (Luxbock)
-* Ivan Pierre (ivanpierre)
-* Chris Pickard (ChrisPickard)
-* Dimirtios Piliouras (jimpil)
-* Robert Pitts (rbxbx)
-* David Pollack (dpp)
-* Tim Pope (tpope)
-* John Poplett (John-Poplett)
-* Cesar Bolanos Portilla (cesarbp)
-* Gerbrand "Gary" Poster IV (gary-poster)
-* Philip Potter (ppotter)
-* David Powell
-* Oliver Powell (greywolve)
-* James M Powers
-* Nikhil Prabhakar
-* Prakash (prakash23)
-* Timothy Pratley
-* Luc Prefontaine (lprefontaine)
-* Romain Primet (rprimet)
-* Nivedita Priyadarshini (nid90)
-* Nikita Prokopov (tonsky)
-* Rhodri Pugh (rodnaph)
-* Joonas Pulakka
-* Cameron Pulsford
-* Stephen Purcell
-* Geoffrey Purdy (GeoffPurdy)
-* Tienson Qin (tiensonqin)
-* Fu Yong Quah (fyquah95)
-* Zubair Quraishi (zubairq)
-* Drew Raines (drewr, mtndrew0)
-* R U Naresh Raju (meumanaresh)
-* Shawn Rasheed (unshorn)
-* Amit Rathore
-* David Ray (daveray)
-* Reno Reckling (exi)
-* Abhishek Reddy (arbscht)
-* Christopher Redinger
-* Alex Redington
-* James Reeves (weavejester)
-* Mihir Rege (geremih)
-* Aviad Reich (aviad)
-* Relevance Inc.
-* Daniel Renfer (duck1123)
-* Matt Revelle (mattrepl)
-* Brendan Ribera (abscondment)
-* Alen Ribic (billdozr)
-* Norman Richards (normanrichards)
-* Andrea Richiardi (arichiardi)
-* Daniel Richman (ddrichman)
-* Eric Richmond (erichmond)
-* Tim Riddell
-* Christopher Riddoch
-* Samuel Ritchie
-* Ralph Ritoch (rritoch)
-* Pierre-Yves Ritschard
-* William Robertson (billrobertson42)
-* Thomas Rodgers
-* William Roe (wjlroe)
-* Collin Rogowski (qollin)
-* Allen Rohner (arohner)
-* Christian Romney
-* Andrew Rosa (andrewhr)
-* Jeff Rose
-* Sean Ross
-* Ales Roubicek(rarous)
-* Tchavdar Roussanov
-* Yoav Rubin (yoavrubin)
-* Tavis Rudd (tavisrudd)
-* Jason Rudolph (jasonrudolph)
-* Edward Ruggeri (ruggeri)
-* Jose Antonio Ortega Ruiz (jao)
-* David Rupp
-* Chance Russell (chancerussell)
-* Patrick Ryan (phiat)
-* Peter Ryan
-* Jan Rychter
-* Jeff Sack
-* Roland Sadowski (fyuryu)
-* Alan Salewski (salewski)
-* Michel Salim
-* Steve Salkin (sls)
-* Adrian Sampaleanu (asampal)
-* Jason Samsa
-* Park Sang-Kyu (guruma)
-* Jason Sankey
-* Dave Sann (davesann)
-* David Santiago
-* Joseph Santos (joridos)
-* Fabio Santschi (hokkaido)
-* Jeff Sapp
-* David Sargeant (dubiousdavid)
-* Michael Sassak (msassak)
-* Christoffer Sawicki (gerub)
-* Mat Schaffer (matschaffer)
-* Michael Scheinholtz
-* Kurt Schelfthout
-* Roman Scherer (roman jira)
-* Samuel Jacob Schetterer (schets)
-* Daniel R Schlegel (digitalneoplasm)
-* Gregory Schlomoff (gregschlom)
-* Adam Schmideg (adamschmideg)
-* Karsten Schmidt (toxi)
-* Ralf Schmitt (schmir)
-* Eric Schoonover (spoon16)
-* Silvia Schreier (saivlis)
-* Seth Schroeder
-* Marian Schubert (maio)
-* Peter Schuck (spinningtopsofdoom)
-* Peter Schuller
-* K E Schulze (keithschulze)
-* Maik Schünemann (mschuene)
-* Rainer Schuster (schuster-rainer)
-* Carlo Sciolla (skuro)
-* Aaron Scott
-* Dylan Scott (dylanscott)
-* Ryan Senior
-* Smit Shah (Who828)
-* Zhanlin Shang (Z-Shang)
-* Rupa Shankar (RUPSS)
-* Daniel Shapero (danshapero)
-* Yehonathan Sharvit (viebel)
-* Ghadi Shayban
-* Christopher Shea
-* Andy Sheldon (asheldo)
-* Jeremy Sherman (jeremy-w)
-* Joe Shidel (shidel-dev)
-* Patrick Shields
-* Jose Pablo Fernandez Silva (pupeno)
-* Howard Lewis Ship (hlship)
-* Jeremy Shoemaker (codingkoi)
-* Sean Shubin
-* Oleksandr Shyshko (oshyshko)
-* Joseph Siddall (jbsiddall)
-* Inderbir Sidhu (bcisidhu)
-* Frank Siebenlist
-* Stuart Sierra
-* Peter Siewert (cninja)
-* Anthony L. Simpson
-* Mark Simpson (verdammelt)
-* Chris Sims (jcsims)
-* Narayan Singhal
-* David Sison (thoughtmanifest)
-* Daniel Škarda (danskarda)
-* Brandon Skinner (brandon-m-skinner)
-* Christopher T. Small (metasoarous)
-* Griffin Smith (glittershark)
-* Jennifer Smith (jennifersmith)
-* Joseph Smith (solussd)
-* Jonathan Smith
-* Justin Glenn Smith (noisesmith)
-* Matthew O. Smith (m0smith)
-* Ben Smith-Mannschott
-* Joseph J Snickeris (jsnickeris)
-* Paul L. Snyder (pataprogramming)
-* Frantisek Sodomka (fsodomka)
-* Erik Soehnel (hoeck)
-* Daniel Solano Gómez (sattvik)
-* Kevin Solorio (ksolo)
-* Alexander Solovyov (piranha)
-* Maksim Soltan (Gonzih)
-* William Sommers (will-sommers)
-* Dmitri Sotnikov (yogthos)
-* Kevin Sookocheff (soofaloofa)
-* Nathan Sorenson
-* Aleksandr Sorokoumov (Gerrrr)
-* Dmitri Sotnikov (yogthos)
-* Malcolm Sparks (malcolmsparks)
-* Cort Spellman (spellman)
-* Christopher Spencer (cspencer)
-* Michael Sperber (active-group)
-* Marek Srank (Mnicky)
-* Ramko Sredojevic (radoye)
-* Akhilesh Srikanth (akhileshs)
-* Srihari Sriraman (ssrihari)
-* Paul Stadig
-* Alex Stangl (astangl)
-* Mitchell Steed (MitchSteed)
-* Cosmin Stejerean
-* Peter Stephens (pstephens)
-* Immanuel Sterzik (immist)
-* Bodil Stokke (bodil)
-* John Stoneham
-* Vincent Storme (vincentstorme)
-* Nola Stowe (rubygeek)
-* Alf Kristian Støyle (stoyle)
-* Tristan Strange (triss)
-* Jefrey Straszheim
-* Robert Stuttaford
-* Gijs Stuurman (thegeez)
-* Steven Suehs (skelter)
-* John Sullivan (JackSullivan)
-* Geoffry Sumter (geoffrys)
-* Neale Swinnerton (sw1nn)
-* Rasmus Svensson (raek)
-* Julian Sy (syjulian)
-* ghufran syed (ghufransyed)
-* Gordon Syme (gordonsyme)
-* John Szakmeister
-* Daniel Szmulewicz (danielsz)
-* Ketan Tada (kvtada)
-* Alex Taggart
-* Tyler Tallman
-* Wei Tang (sorpaas)
-* Peter Taoussanis (PTaoussanis)
-* Brian Taylor (netguy204)
-* Chad Taylor (tessellator)
-* Colin Taylor (coltnz)
-* Miki Tebeka
-* Ian Tegebo (itegebo)
-* Zachary Tellman
-* Sven Tennie (supersven)
-* Juho Teperi (Deraen)
-* Benjamin Teuber
-* Srinivas Reddy Thatiparthy (srinivasreddy)
-* Scott Thoman (thorstt)
-* Justin Thomas (base698)
-* Randall Thomas (evilmartini)
-* Alan Thompson (catalan42)
-* Oskar Thorén (Oskarth)
-* Eric Thorsen (EricThorsen)
-* Travis Thieman (tthieman)
-* Joshua Tilles (mereleyapseudonym)
-* Justin Tirrell (jjttjj)
-* Robert W. Tolbert
-* David Tolpin (dtolpin)
-* Steven Tomcavage (stomcavage)
-* Marko Topolnik (mtopolnik)
-* Laszlo Török (LACZOKA)
-* Devin Alexander Torres (devinus)
-* Grigory "Gary" Trakhman (gtrak)
-* Jonathan Tran
-* Perry Trolard (trolard)
-* Chris Truter (crisptrutski)
-* Benny Tsai (bitsai)
-* Edward Tsech (edtsech)
-* Tatsuya Tsuda (otabat)
-* J. Chris Turner (BestFriendChris)
-* Arthur Ulfeldt
-* Moritz Ulrich (the-kenny)
-* Sam Umbach
-* Anthony Urena (anthgur)
-* Travis Vachon
-* Matthew Valdez (mjvaldez)
-* Jeff Valk (jeffvalk)
-* Luke VanderHart
-* Walter Van Der Laan
-* Cees Van Kemenade (cvkem)
-* Geert Van Laethem (geertvl)
-* Pieter van Prooijen(pieter-van-prooijen)
-* D van Tonder (daneelvt)
-* Fabio TUdone (circlespainter)
-* Remco van 't Veer (rwvtveer)
-* Gerrit Jansen Van Vuuren (gerritjvv)
-* Ryan Verner (ryanzverner)
-* Seth Verrinder (sethev)
-* Constantine Vetoshev (gcv)
-* Max Veytsman (mveytsman)
-* Francisco Viramontes (Kidpollo)
-* Tim Visher (timvisher)
-* Harley Waagmeester (HarleyWaagmeester)
-* Anil Wadghule (anildigital)
-* Jozef Wagner (wagjo)
-* Adnan Wahab (King-of-Spain)
-* Akhil Wali (darth10)
-* John Walker (johnwalker)
-* Jason Walsh (jwalsh)
-* Devin Walters (defn)
-* Timothy J. Washington (twashing)
-* Minori Yamashita (ympbyc)
-* Lei Wang
-* Edwin H. Watkeys III (edw)
-* Mark Watson (mkwatson)
-* Brian Weber
-* Kevin Webster (rabidpraxis)
-* Matthew West (MatthewWest)
-* Lucas Wiener (wnr)
-* Jeffrey Weiss (jweiss)
-* Crispin Wellington (retrogradeorbit)
-* Trevor Wennblom (trevor)
-* Mark Whelan (mrwhelan)
-* Blake West (bwest87)
-* Matthew A. West (MatthewWest)
-* Joel Westerberg (sunkencity)
-* Russell Whitaker (russellwhitaker)
-* Jason Whitlark (jwhitlark)
-* David Whittington
-* Ivan Wick (ivanwick)
-* Nate Wildermuth (wildermuthin)
-* Darrick Wiebe (pangloss)
-* Joseph Wilk (josephwilk)
-* Ivan Willig (iwillig)
-* Colin Williams (lackita)
-* John Williams
-* Shaun Williams (shaunlebron)
-* Chris Wilson
-* Joel Wilsson (wjoel)
-* Guillermo Winkler (Guilespi)
-* Jenan Wise (jenanwise)
-* John Wiseman (wiseman)
-* Toralf Wittner
-* Daniel Woelfel (dwwoelfel)
-* Jason Wolfe
-* Francis Wolke
-* Juvenn Woo (juvenn)
-* Kevin Woram (kworam)
-* Andreas Wurzer (andeee)
-* Zhuang XiaoDan (killme2008)
-* Di Xu (xudifsd)
-* James Xu (xumingming)
-* Alexander Yakushev (alexander-yakushev)
-* Minori Yamashita (ympbyc)
-* Hongseok Yang (hongseok-yang)
-* Tsutomu Yano (tyano)
-* Jingguo Yao (jingguo)
-* David J. Yarwood (daveyarwood)
-* Benjamin Yelsey (byels)
-* Lee Yen-Chin (coldnew)
-* Jason Yeo (jsyeo)
-* Steven Yi (kunstmusik)
-* Nathaniel Young
-* Brennon York (brennonyork)
-* Yifeng Yu (tylaar)
-* Seth Yuan (sethyuan)
-* Daniel Zacarias (dzacarias)
-* Nathan Zadoks (nathan7)
-* Carlo Zancanaro (czan)
-* Nick Zbinden (nickik)
-* Guangyu Zhang (zguangyu0000)
-* Rob Zumwalt (rzoom)
-* Greg Zuro (gregzuro)
- 
+include::contributors.adoc[]
 
 [[patches]]
-== Contributed patches to Clojure: 
+== Contributed patches to Clojure:
 
 * Aaron Bedra
 * Aaron Cohen
@@ -1262,4 +166,4 @@ Please see the http://dev.clojure.org/display/community/Contributing[Contributin
 * Yanxiang Lou
 * Zach Tellman
 
-=== _*Many thanks for your contributions to Clojure!*_ 
+=== _*Many thanks for your contributions to Clojure!*_
